endpoints-xds/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - name: http
      protocol: TCP
      port: 9002
      targetPort: 9002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      service: dashboard
      app: dashboard
  template:
    metadata:
      labels:
        service: dashboard
        app: dashboard
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "counting:9001"
    spec:
      serviceAccountName: dashboard
      containers:
      - name: dashboard
        image: hashicorp/dashboard-service:0.0.4
        ports:
        - containerPort: 9002
          name: http
